--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --wood-brown: #8B4513;
     --light-walnut: #DEB887;
     --cream: #FDFBF7;
-    --dark-cedar: #533D32;
+    --dark-cedar: #9B2D30;
     --sage: #767E6C;
 }
 
