--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --wood-brown: #8B4513;
+    --wood-brown: #9B2D30;
     --light-walnut: #DEB887;
     --cream: #FDFBF7;
     --dark-cedar: #9B2D30;
