--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --wood-brown: #9B2D30;
+    --Verniz: #9B2D30;
     --light-walnut: #DEB887;
     --cream: #FDFBF7;
-    --dark-cedar: #9B2D30;
+    --madeira-escura: #4E342E;
     --sage: #767E6C;
 }
 
