--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --Verniz: #9B2D30;
+    --Verniz: #D1A684;
     --light-walnut: #DEB887;
     --cream: #FDFBF7;
     --madeira-escura: #4E342E;
