--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --verniz: #8B3D3D; /* Um verniz mais seco, avermelhado e elegante */
-    --walnut: #A67B5B; /* Nogueira em um tom mais suave e neutro */
+    --walnut: #A67R5B; /* Nogueira em um tom mais suave e neutro */
     --madeira-escura: #3E2E2E; /* Madeira escura em tom seco e profundo */
     --ebony: #2A1F1D; /* Ébano, quase preto, com um toque sutil de marrom */
 }
