--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 body {
     background-color: var(--cream);
-    color: var(--dark-cedar);
+    color: var(--verniz);
     line-height: 1.6;
 }
 
