--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 nav {
-    background-color: var(--oak);
+    background-color: var(--ebony);
     padding: 1rem;
     position: sticky;
     top: 0;
