--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 body {
-    background-color: var(--black);
+    background-color: var(--cream);
     color: var(--ebony);
     line-height: 1.6;
 }
