--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --walnut: #A67B5B; /* Nogueira em um tom mais suave e neutro */
     --cream: #F5F2E6; /* Um creme ligeiramente mais seco e sutil */
     --madeira-escura: #3E2E2E; /* Madeira escura em tom seco e profundo */
-    --ebony: #FFFFFF; /* Ébano, quase preto, com um toque sutil de marrom */
+    --ebony: #242121; /* Ébano, quase preto, com um toque sutil de marrom */
     --pine: #D8BFAA; /* Tom claro de madeira, como o pinho */
     --sage: #6B7666; /* Verde sálvia mais seco, para complementar */
     --oak: #BC8F5A;
